--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ ark-std = { version = "0.5", default-features = false }
 ark-ff = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false }
 ark-poly = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false }
 ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = ["curve"] }
+rayon = { version = "1.11", optional = true }
 
 [dev-dependencies]
 criterion = "0.7"
@@ -17,6 +18,7 @@ name = "product_tree"
 harness = false
 
 [features]
-parallel = ["ark-std/parallel", "ark-ff/parallel", "ark-poly/parallel"]
+std = ["ark-std/std", "ark-ff/std", "ark-poly/std"]
+parallel = ["std", "ark-std/parallel", "ark-ff/parallel", "ark-poly/parallel", "rayon"]
 asm = ["ark-ff/asm", "ark-bls12-381/asm"]
 print-trace = ["ark-std/print-trace"]
